package tci.demo.week1.school;

import java.util.ArrayList;
import java.util.List;
import java.util.Objects;

/**
 * Group_withTestSpecification represents a group of unique students, e.g. a class e-s72,
 * and is uniquely identified by it's name.
 * When a group has no name yet, it automatically is given
 * the temporary name "unknown". The name can be changed later.
 *
 */
public class Group {

    private String name; // name of the group is the class name, e.g, "e-s72"
    private List<Student> students = new ArrayList<>(); // students in this group

    /**
     * Creates a group with a default name "unknown"
     */
    public Group() {
        this.name = "unknown";
    }

    /**
     * Creates a Group_withTestSpecification object with a given name.
     * @param name is the name of the group/class, e.g., "e-s72"
     */
    public Group(String name) {
        this.name = name;
    }


    /**
     * Add a student to the group
     * @param student Student to add
     */
    public void addStudent(Student student){
        students.add(student);
    }

    /**
     * Assigns a mentor to all students in this group
     * @param mentor is the mentor of the group
     */
    public void setMentor(String mentor){
        for (Student s: this.students
             ) {
            s.setMentor(mentor);
        }
    }

    /**
     *
     * @param studentNumber
     * @return a Student object when found, otherwise null
     */
    public Student getStudentById(int studentNumber){
        Student returnvalue = null;
        for (Student s: this.students
             ) {
            if(s.getStudentNumber() == studentNumber){
                returnvalue = s;
                break;
            }
        }
        return null;
    }
    /******************************************************
     *
     *   GETTERS/SETTERS CODE IS GENERATED BY INTELLIJ,
     *   AND UNTOUCHED BY PEOPLE.
     *   THE BEHAVIOUR OF THIS CODE DOES NOT HAVE TO BE TESTED.
     *
     ********************************************************/

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    /******************************************************
     *
     *   OTHER CODE GENERATED BY INTELLIJ,
     *   BUT BASED ON INPUT OF A PROGRAMMER.
     *   THE BEHAVIOUR OF THIS CODE HAS TO BE TESTED.
     *   (but not present to keep demo code short)
     *
     ********************************************************/

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Group group = (Group) o;
        return name.equals(group.name);
    }

    @Override
    public int hashCode() {
        return Objects.hash(name);
    }


}
