package tci.demo.week1.school;

import java.util.ArrayList;
import java.util.List;
import java.util.Objects;
/**
 * A student is identified by studentNumber and name.
 * A student gets semester number 1 when enrolled for the first time (e.g., new regular bachelor students).
 * studentnumber never changes. the name can change.
 *
 * semesters range from 1..8
 * with a unique student number, consisting of 5 digits.
 */

public class Student implements IStudent {

    private static final int NUMBER_DIGITS_STUDENT_NUMBER = 5;

    private final int studentNumber;
    private String name;
    private List<Course> passedCourses = new ArrayList<>(); // all courses which this student has passed
    private String mentor;


    /**
     * Constructor which sets fields for studentNumber and firstName. Field semester is set to 1.
     * Should be used when student is enrolled in the first semester (e.g., regular bachelor students).
     *
     * @param studentNumber student number of 5 digits.
     * @param name     full full name of the student, e.g., Joe van der Smith
     * @throws IllegalArgumentException Exception is thrown is studentNumber is not a positive 5-digits integer,
     *                                  or semester is not in range [1..8].
     */
    public Student(int studentNumber, String name) throws IllegalArgumentException {
        if (studentNumber < 0) {
            throw new IllegalArgumentException("Student number cannot be negative.");
        }

        int lengthStudentNumber = String.valueOf(studentNumber).length();
        if (lengthStudentNumber != NUMBER_DIGITS_STUDENT_NUMBER) {
            throw new IllegalArgumentException("Student number must have exactly " + NUMBER_DIGITS_STUDENT_NUMBER + " digits.");
        }

        this.studentNumber = studentNumber;
        this.name = name;
        this.mentor= "unknown";
    }


    /**
     * get the total ECs from all passed courses.
     * @return number of ECs.
     *
     */
    @Override
    public int getTotalECs() {
        int totalECs = 0;
        for (Course course: passedCourses) {
            totalECs += course.getEc();
        }
        return totalECs;
    }

    /**
     * adds a passed course to a student. a student can only pass a course once.
     * @param course
     */
    @Override
    public void addPassedCourse(Course course) {
        this.passedCourses.add(course);
    }

    /**
     * removes a passed course from a student.
     * @param course passed course to remove
     * @throws NotFoundException when course is not found
     */
    @Override
    public void removePassedCourse(Course course) throws NotFoundException {
        this.passedCourses.remove(course);
    }


    /******************************************************
     *
     *   GETTERS/SETTERS CODE IS GENERATED BY INTELLIJ,
     *   AND UNTOUCHED BY PEOPLE.
     *   THE BEHAVIOUR OF THIS CODE DOES NOT HAVE TO BE TESTED.
     *
     ********************************************************/

    @Override
    public int getStudentNumber() {
        return studentNumber;
    }

    @Override
    public String getName() {
        return name;
    }

    @Override
    public void setName(String name) {
        this.name = name;
    }

    @Override
    public String getMentor() {
        return mentor;
    }

    @Override
    public void setMentor(String mentor) {
        this.mentor = mentor;
    }

    /******************************************************
     *
     *   OTHER CODE GENERATED BY INTELLIJ,
     *   BUT BASED ON INPUT OF A PROGRAMMER.
     *   THE BEHAVIOUR OF THIS CODE HAS TO BE TESTED.
     *   (but not present to keep demo code short)
     *
     ********************************************************/
    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Student student = (Student) o;
        return studentNumber == student.studentNumber;
    }

    @Override
    public int hashCode() {
        return Objects.hash(studentNumber);
    }
}
