package tci.demo.week3.multipledocs;

public interface Client {
    Object getEmail();
}
