package tci.demo.week3.multipledocs;

public interface MailServer {
    void send(Object email, String msgContent);
}
