package tci.demo.week3.multipledocs;

public interface TemplateEngine {
    String prepareMessage(Template template, Client client);
}
