package tci.demo.week4.legacycode.originalcode;

public interface Animal {
}
