package tci.demo.week4.legacycode.originalcode;

public interface Zoo {
    void addAnimal(Animal animal);
}
