@startuml

title __TCI_DEMO_ALL_MAVENVERSION's Class Diagram__\n

  namespace  {
    namespace ci.demo.week1.buffer {
      class tci.demo.week1.buffer.BufferIsFullException {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.buffer {
      class tci.demo.week1.buffer.IntBuffer {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.buffer {
      class tci.demo.week1.solutions.IntBufferIMPLEMENTATION {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.school {
      class tci.demo.week1.school.Course {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.school {
      class tci.demo.week1.school.Group {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.school {
      class tci.demo.week1.school.NotFoundException {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.school {
      class tci.demo.week1.school.Student {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.school {
      interface tci.demo.week1.school.IStudent {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week1.school {
      namespace ssignment {
        class tci.demo.week1.schoolassignment.Course {
        }
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.multipledocs {
      interface tci.demo.week3.multipledocs.Client {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.multipledocs {
      interface tci.demo.week3.multipledocs.MailServer {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.multipledocs {
      class tci.demo.week3.multipledocs.Messenger {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.multipledocs {
      interface tci.demo.week3.multipledocs.Template {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.multipledocs {
      interface tci.demo.week3.multipledocs.TemplateEngine {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.testcherry {
      class tci.demo.week3.testcherry.Group {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week3.testcherry {
      namespace olution {
        class tci.demo.week2.school.solutions.Group_withTestSpecification {
        }
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.defaultobjecttests {
      class tci.demo.week4.defaultobjecttests.Person {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      interface tci.demo.week4.legacycode.Animal {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      class tci.demo.week4.legacycode.ManagingCompany {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      class tci.demo.week4.legacycode.Zebra {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      interface tci.demo.week4.legacycode.Zoo {
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      namespace looselycoupled {
        interface tci.demo.week4.legacycode.looselycoupled.Animal {
        }
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      namespace looselycoupled {
        class tci.demo.week4.legacycode.looselycoupled.ManagingCompany {
        }
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      namespace looselycoupled {
        class tci.demo.week4.legacycode.looselycoupled.Zebra {
        }
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.legacycode {
      namespace looselycoupled {
        interface tci.demo.week4.legacycode.looselycoupled.Zoo {
        }
      }
    }
  }
  

  namespace  {
    namespace ci.demo.week4.matchers {
      class tci.demo.week4.matchers.Cat {
      }
    }
  }
  

  tci.demo.week1.school.Student .up.|> tci.demo.week1.school.IStudent
  tci.demo.week3.multipledocs.Messenger o-- tci.demo.week3.multipledocs.MailServer : mailServer
  tci.demo.week3.multipledocs.Messenger o-- tci.demo.week3.multipledocs.TemplateEngine : templateEngine
  tci.demo.week4.defaultobjecttests.Person .up.|> java.lang.Comparable
  tci.demo.week4.legacycode.ManagingCompany o-- tci.demo.week4.legacycode.Zoo : zoo
  tci.demo.week4.legacycode.Zebra .up.|> tci.demo.week4.legacycode.Animal
  tci.demo.week4.legacycode.looselycoupled.ManagingCompany o-- tci.demo.week4.legacycode.looselycoupled.Zoo : zoo
  tci.demo.week4.legacycode.looselycoupled.Zebra .up.|> tci.demo.week4.legacycode.looselycoupled.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
